--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                </div>
             </div><!--expiry-->
             </div><!--cardnumbers-->
+            <div class="bgen">
+            </div>
             <div class="card-name"><h4>ENVISER CLIENT</h4></div>
             <div class="visa-logo">
                 <img src="images/Visa.png" width="70" alt="visa">
@@ -210,8 +212,8 @@
                     <p>you can easily manage your Visa card from your smartphone. You can check your balance, transactions, rewards, and more. You can also pay with your phone using Visa PayWave technology, which is fast, secure, and convenient.
                          The Visa Connect app is the ultimate way to enjoy the benefits of your Visa card.</p>
                          <div class="buttons">
-                            <a href="#"><i class="fa-brands fa-google-play"></i>DOWNLOAD</a>
-                            <a href="#"><i class="fa-brands fa-app-store"></i>DOWNLOAD</a>
+                            <a href="#services"><i class="fa-brands fa-google-play"></i>DOWNLOAD</a>
+                            <a href="#services"><i class="fa-brands fa-app-store"></i>DOWNLOAD</a>
                          </div>
                 </div><!--app-details-desc-->
                 <div class="clearfix"></div>
@@ -266,7 +268,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to Basic plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 60 Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Apply</a>
+                        <a href="#pricing" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ########### item 2 ########### -->
@@ -281,7 +283,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to standerd plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 90 Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Apply</a>
+                        <a href="#pricing" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ######## item 3 ######### -->
@@ -296,7 +298,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to PRO plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 90+ Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Apply</a>
+                        <a href="#pricing" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ######## item 3 ######### -->
@@ -311,7 +313,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to Pro+ plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 120 Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Apply</a>
+                        <a href="#pricing" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
                 <!-- ######## item 4 ######### -->
@@ -326,7 +328,7 @@
                         <p><i class="fa-solid fa-check"></i> Access to ADVANCED plan Features</p>
                         <p><i class="fa-solid fa-check"></i> 150+ Countries</p>
                         <p><i class="fa-solid fa-check"></i> Technical Support</p>
-                        <a href="#" class="rta">Apply</a>
+                        <a href="#pricing" class="rta">Apply</a>
                     </div><!--rtback-->
                 </div><!--rotate-card rtc1-->
             </div><!--rotate-cards-parent-->
@@ -342,15 +344,15 @@
                         <i class="fa-solid fa-truck-arrow-right risup"></i>
                        </div><!--icon-re-->
                         <div class="ldr-desc">
-                        <p>Fast & Easy</p>
-                        <p class="ldr-p">Easy fast service without errors</p>
+                        <p>Free Delivery</p>
+                        <p class="ldr-p">Free Shipping On All Order</p>
                         </div><!--ldr-desc-->
                     </div><!--ldr ldr1-->
                     <div class="ldr ldr1">
                         <!-- <i class="fa-light fa-bolt"></i> -->
                       <div class="icon-re">
-                        <i class="fa-solid fa-circle-notch hidup"></i>
-                        <i class="fa-solid fa-circle-notch risup"></i>
+                        <i class="fa-solid fa-bolt hidup"></i>
+                        <i class="fa-solid fa-bolt risup"></i>
                        </div><!--icon-re-->
                         <div class="ldr-desc">
                         <p>Fast & Easy</p>
@@ -364,8 +366,8 @@
                         <i class="fa-solid fa-handshake risup"></i>
                        </div><!--icon-re-->
                         <div class="ldr-desc">
-                        <p>Fast & Easy</p>
-                        <p class="ldr-p">Easy fast service withnout errors</p>
+                        <p>Always Helpful</p>
+                        <p class="ldr-p">24/7 Stand by Support</p>
                         </div><!--ldr-desc-->
                     </div><!--ldr ldr1-->
                     <div class="ldr ldr1">
@@ -375,8 +377,8 @@
                         <i class="fa-solid fa-signature risup"></i>
                        </div><!--icon-re-->
                         <div class="ldr-desc">
-                        <p>Fast & Easy</p>
-                        <p class="ldr-p">Easy fast service withnout errors</p>
+                        <p>Specific Signature</p>
+                        <p class="ldr-p">Only valid by your ID</p>
                         </div><!--ldr-desc-->
                     </div><!--ldr ldr1-->
                     <div class="ldr ldr1 ldrlast">
@@ -386,8 +388,8 @@
                         <i class="fa-solid fa-credit-card risup"></i>
                        </div><!--icon-re-->
                         <div class="ldr-desc">
-                        <p>Fast & Easy</p>
-                        <p class="ldr-p">Easy fast service witnout errors</p>
+                        <p>World WIDE</p>
+                        <p class="ldr-p">Over 130+ Countries & C.banks</p>
                         </div><!--ldr-desc-->
                     </div><!--ldr ldr1-->
                 </div><!--loader-parent-->
@@ -401,31 +403,31 @@
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
+                        <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
+                        <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
+                        <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
+                        <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita1 itb">
                     <p>Lorem ipsum dolor sit amet consectetur 
                         adipisicing elit. Doloremque nulla magnam 
                         facere exercitationem cum alias!</p>
-                        <a href="#">Apply Now</a>
+                        <a href="#features">Apply Now</a>
                 </div><!--item1-->
             </div><!-- cf-content -->
         </div><!--cf-parent-->
