animantion app delayed & added footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#UPDATES">Features</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#features">Types</a></li>
+                <li><a href="#features">INFO</a></li>
                 <!-- <li><a href="#blog">Blog</a></li>
                 <li><a href="#team">Team</a></li> -->
             </ul>
@@ -400,33 +400,34 @@
             <h2>What We Povide</h2>
             <div class="cf-content">
                 <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
+                    <div class="ita-a">
+                    <p>We are building a more robust, scalable, 
+                        and sustainable global network for growth 
+                        to create value for all our stakeholders. With customers at the core of every
+                         decision, our digital banking innovation strategy!</p>
+                        </div><!--ita-a-->
                         <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#features">Apply Now</a>
+                    <div class="ita-a">
+                    <p>Disrupting the retail banking landscape, we launched  ila Bank​, the region’s first exclusively cloud-based digital mobile-only bank, in Bahrain in November 2019. Merging cutting-edge technologies and a human-centric design</p>
+                </div><!--ita-a-->
+                <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
-                        <a href="#features">Apply Now</a>
+                    <div class="ita-a">
+                    <p>The forum soon became one of the region’s most significant congregations of world-leading names in finance and technology. Held under the patronage of the Central Bank</p>
+                </div><!--item1-->
+                <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
+                    <div class="ita-a">
+                    <p>We are disrupting legacy banking models to drive growth in an environment of continuous technological advancement. we are leveraging cutting-edge technologies to design simple, flexible</p>
+                    </div><!--ita-a-->
                         <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita1 itb">
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Doloremque nulla magnam 
-                        facere exercitationem cum alias!</p>
+                    <p>We set up the Group Innovation Function to accelerate the Bank's strategic transformation and foster a more agile work culture. A dedicated space in the Head Office called "ABC Labs" has been developed to facilitate ideation and innovation across the Group</p>
                         <a href="#features">Apply Now</a>
                 </div><!--item1-->
             </div><!-- cf-content -->
@@ -434,5 +435,44 @@
         </section><!--cards-featsec-->
         <!-- START OF FEATURED FIGURES SECTION -->
 </div><!--container-->
+<footer class="footer">
+    <div class="footer-main">
+        <img src="images/enviser.png" width="110" alt="env-footer">
+        <h2>ENVISER</h2>
+        <P>Is a Professional Legel independent limited liability COP. For international World Wide visa cards</P>
+    </div><!--footer-main-->
+    <!-- //////////////////////// -->
+    <div class="footer-details">
+       <div class="f-products">
+        <h3>Product</h3>
+        <div class="f-links">
+        <a href="#">TOP ORGANIZATION</a>
+        <a href="#">BANDWIDTH MANAGMENT</a>
+        <a href="#">NETWORL VISIBILITY</a>
+        <a href="#">--</a>
+       </div><!--links-->
+       </div><!--f-products-->
+       <div class="f-general">
+        <h3>General</h3>
+        <div class="f-links">
+        <a href="home">Home</a>
+        <a href="#2ndsec">About</a>
+        <a href="#UPDATES">Features</a>
+        <a href="#services">Services</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#features">INFO</a>
+        </div>
+       </div><!-- general -->
+       <div class="f-social">
+        <h3>Social</h3>
+        <div class="f-links">
+        <a href="#">Google</a>
+        <a href="#">linkdin</a>
+        <a href="#">twitter</a>
+        <a href="#">youtube</a>
+        </div>
+       </div>
+    </div><!--footer-detail-->
+</footer>
 </body>
 </html>
