--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
         <img src="images/enviser.png" width="110" alt="env-footer">
         <h2>ENVISER</h2>
         <P>Is a Professional Legel independent limited liability COP. For international World Wide visa cards</P>
+        <p>DESINED & CODED BY YASSIN WAEL &copy; 2023 ALL RIGHTS REVERSED</p>
     </div><!--footer-main-->
     <!-- //////////////////////// -->
     <div class="footer-details">
