--- a/index.html
+++ b/index.html
@@ -404,13 +404,14 @@
                     <p>We are building a more robust, scalable, 
                         and sustainable global network for growth 
                         to create value for all our stakeholders. With customers at the core of every
-                         decision, our digital banking innovation strategy!</p>
+                         decision, our digital innovation strategy!</p>
                         </div><!--ita-a-->
                         <a href="#features">Apply Now</a>
                 </div><!--item1-->
                 <div class="item ita itb">
                     <div class="ita-a">
-                    <p>Disrupting the retail banking landscape, we launched  ila Bank​, the region’s first exclusively cloud-based digital mobile-only bank, in Bahrain in November 2019. Merging cutting-edge technologies and a human-centric design</p>
+                    <p>Disrupting the retail banking landscape, we launched  ila Bank, 
+                        the region's first exclusively cloud-based digital mobile-only bank Merging cutting-edge technologies and a human-centric design</p>
                 </div><!--ita-a-->
                 <a href="#features">Apply Now</a>
                 </div><!--item1-->
